[project]
name = "options-trader"
version = "0.1.0"
description = "Options Trading Finder & Simulator — Tastytrade mechanical premium-selling approach"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "scipy>=1.17.0",
    "tabulate>=0.9.0",
    "yfinance>=1.2.0",
]

[project.scripts]
options-trader = "main:cli"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
